--- a/src/web/SuperBoxSelect/superboxselect.css
+++ b/src/web/SuperBoxSelect/superboxselect.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset 'utf-8';
 .x-superboxselect {
 	position: relative;
 	height: auto !important;
@@ -91,8 +91,8 @@ body.ext-ie6 .x-superboxselect-item {
 	padding: 2px 19px 4px 5px !important;
 }
 .x-superboxselect-item-hover {
-	/*background: #BBCEF1;*/
-	/*border: 1px solid #6D95E0;*/
+	background: #BBCEF1;
+	border: 1px solid #6D95E0;
 }
 .x-superboxselect-item-focus {
 	border-color: #598BEC;
@@ -122,4 +122,3 @@ body.ext-ie6 .x-superboxselect-item {
 .x-item-disabled .x-superboxselect-item-close {
 	background-position: left -36px;
 }
-
