On the front end, the first version with basic core functionality implemented.
On the back end, xyplot has been altered to correctly plot conditioning

--- a/src/views/begin.html
+++ b/src/views/begin.html
@@ -1,23 +1,19 @@
-<div id='buttonCreateNcdf' class='centered'></div>
+<div id='buttonCreateNcdf' class='centered-div'></div>
 
-<br />
+<div id='HiddenDiv' class='centered-div'></div> <!-- style='display: none'></div> -->
 
-<div id='HiddenDiv' class='centered'></div> <!-- style='display: none'></div> -->
-
-<br>
 
 <table class='centered-table'>
-	<tr><th>Keywords</th></tr>
+	<tr><th>Please, select the keywords that are of interest:</th></tr>
 	<tr><td><div id='comboKeywordName'></div></td></tr>
 </table>
 
-<div id='buttonSetKeywords' class='centered'></div>
+<div id='buttonSetKeywords' class='centered-div'></div>
 
 <br />
 
-<div id='tableKeywords' class='centered'>
-	<ul id='sortable'>
-	</ul>
+<div id='tableKeywords' class='centered-div'>
+	<ul id='sortable'></ul>
 </div>
 
 <br />
@@ -33,13 +29,6 @@
 	</tr>
 </table>
 
-<table class='centered-table'> <!--style='display: none'>-->
-	<tr><th>Replicate</th></tr>
-	<tr>
-		<td><div id='comboBoxStim' class='centered'></div></td>
-	</tr>
-</table>
-
 <br />
 
 <table class='centered-table'>
@@ -47,16 +36,18 @@
 	<tr><td><div id='comboFileName'></div></td></tr>
 </table>
 
-<div id='buttonGraph' class='centered'></div>
+<div id='buttonGraph' class='centered-div'></div>
 <br />
 
-<!--<div id='graphWebPartContainer' class='centered'>-->
-	<div id='Graph' class='centered'>
+<div id='graphWebPartContainer' class='centered-div'>
+	<div id='Graph' class='centered-div'>
 		<div style='height: 20px'></div>
 	</div>
-<!--</div>-->
+</div>
 
-<input type='text' id='date' name='date' style='display: none'></input>
+<br />
+
+<div id='gridTable' class='centered-div'></div>
 
 <script type='text/javascript'>	LABKEY.requiresExt4Sandbox(); </script>
 <script>
