--- a/src/views/begin.html
+++ b/src/views/begin.html
@@ -1,64 +1,31 @@
-<div id='buttonCreateNcdf' class='centered-div'></div>
 
-<div id='HiddenDiv' class='centered-div'></div> <!-- style='display: none'></div> -->
+<div id='divTabs'></div>
 
 
-<table class='centered-table'>
-	<tr><th>Please, select the keywords that are of interest:</th></tr>
-	<tr><td><div id='comboKeywordName'></div></td></tr>
-</table>
-
-<div id='buttonSetKeywords' class='centered-div'></div>
-
-<br />
-
-<div id='tableKeywords' class='centered-div'>
-	<ul id='sortable'></ul>
+<div id='divNcdf' class='centered-text'>
+    <div style='height: 60px'></div>
 </div>
 
-<br />
+<ul id='ulSortable' class='bold-centered-text'>
+	<center>Either there was an error, while loading this web part or<br/>
+    the JavaScript functionality in your browser either has been disabled or is not supported.<br/>
+    Please, contact the <a href="mailto:ldashevs@fhcrc.org?Subject=FlowGraph%20Support">developer</a>.</center>
+</ul>
 
-<table class='centered-table'>
-	<tr>
-		<th>X-Axis</th>
-		<th>Y-Axis</th>
-	</tr>
-	<tr>
-		<td><div id='comboBoxXAxis'></div></td>
-		<td><div id='comboBoxYAxis'></div></td>
-	</tr>
-</table>
-
-<br />
-
-<table class='centered-table'>
-	<tr><th id='filesLabel'>Files</th></tr>
-	<tr><td><div id='comboFileName'></div></td></tr>
-</table>
-
-<div id='buttonGraph' class='centered-div'></div>
-<br />
-
-<div id='graphWebPartContainer' class='centered-div'>
-	<div id='Graph' class='centered-div'>
-		<div style='height: 20px'></div>
-	</div>
+<div id='divGraph' class='centered-text'>
+	<div style='height: 60px'></div>
 </div>
 
-<br />
 
-<div id='gridTable' class='centered-div'></div>
-
-<script type='text/javascript'>	LABKEY.requiresExt4Sandbox(); </script>
+<script type='text/javascript'>	LABKEY.requiresExt4ClientAPI(); </script>
+<script src='//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+<script src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js'></script>
 <script>
-	var webpart = <%=webpartContext%>;
-	var wrapperDivId = webpart.wrapperDivId;
-
 	LABKEY.requiresScript(
-			'LoadLibraries.js',
+			'FlowGraph/LoadLibraries.js',
 			true,
 			function() {
-				passParam( wrapperDivId )
+				passParam( <%=webpartContext%>.wrapperDivId );
 			}
 	);
 </script>
