--- a/src/web/OpenCytoVisualization.css
+++ b/src/web/OpenCytoVisualization.css
@@ -2,7 +2,7 @@
 
 /* Error code from R */
 pre {
-    text-align: center;
+    /*text-align: center;*/
 }
 
 /* Class specs */
@@ -49,6 +49,10 @@ pre {
 
 ul.x-tab-strip-top {
     padding-top: 0px;
+}
+
+.x-box-inner {
+    margin-top: 2px;
 }
 
 /* Buttons */
