Added vim modelines and license headers to most of the files
GatingSet query moved to the OpenCytoPreprocessing module since it is common with the OpenCytoQualityControl module

Plot.r : extraneous printed output removed

begin.view.xml : CheckBoxMemory.js plug in dependency added so that the selected rows in a grid table are remembered across query() refreshes

OpenCytoVisualization.js :
- selected study variables are 'cached' so that no query is done if a tab is changed, but the selection of the study variables has not changed from last time
- close #2 since it is no longer relevant with the introduction of the clear button of a combobox
- close #19 if a filtering combo is removed, then the corresponding selection in the combobox is also removed
- close #20 set study variables button removed - now the study variables are set each time a tab is changed to the plotting tab (if the study variables selection has changed from last time it was done)
- if a report session is invalid error is received from the back end when files are being plotted, which probably means that the page has been idle for a while and timed out, then a new LABKEY.Report.createSession() call is made to obtain a new one; once that's done another call to plotFiles is done
- close #1 axis values swap button is added
- RowNumberer() added to the grid table
- when files are subselected in the combo box, the corresponding rows in the grid table are selected as well
- alert() changed to Ext.msg.alert() for consistency

--- a/src/views/begin.html
+++ b/src/views/begin.html
@@ -1,3 +1,5 @@
+<!-- vim: ts=2:sw=2:nu:fdc=2:spell -->
+
 <!--<script type='text/javascript'>	LABKEY.requiresExt4ClientAPI(); </script>-->
 <script src='//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
 <script src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js'></script>
